--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -1,30 +1,43 @@
+// 设置默认标签背景颜色
 $defaultTagBackgrounds: #8ea885, #df7988, #0177b8, #ffb900, #6b69d6;
+// 设置默认标签文字颜色
 $defaultTagColors: #fff, #fff, #fff, #fff, #fff;
 
 /*
 *   Global style
 */
 :root {
-    --main-top-padding: 35px;
+    // 全局顶部边距
+    --main-top-padding: 30px;
 
     @include respond(xl) {
+        // 大屏幕响应时主要顶部填充增加
         --main-top-padding: 50px;
     }
 
-    --body-background: #f5f5fa;
+    // 页面背景颜色
+    --body-background: #EAEAEA;
 
+    // 强调色和其深色变体
     --accent-color: #34495e;
     --accent-color-darker: #2c3e50;
+
+    // 强调色文本颜色和页面文本颜色
     --accent-color-text: #fff;
     --body-text-color: #707070;
 
-    --tag-border-radius: 4px;
+    // 标签和分类的边框半径
+    --tag-border-radius: 8px;
 
+    // 页面区块间隔
     --section-separation: 40px;
 
+    // 滚动条样式
     --scrollbar-thumb: hsl(0, 0%, 85%);
     --scrollbar-track: var(--body-background);
+	
 
+    // 暗色模式下的样式设置
     &[data-scheme="dark"] {
         --body-background: #303030;
         --accent-color: #ecf0f1;
@@ -35,6 +48,7 @@ $defaultTagColors: #fff, #fff, #fff, #fff, #fff;
         --scrollbar-track: var(--body-background);
     }
 }
+
 
 /**
 *   Global font family
@@ -116,8 +130,9 @@ $defaultTagColors: #fff, #fff, #fff, #fff, #fff;
 
     --pre-background-color: #272822;
     --pre-text-color: #f8f8f2;
-
+	// 行内代码背景色
     --code-background-color: rgba(0, 0, 0, 0.12);
+	// 行内代码前景色
     --code-text-color: #808080;
 
     --table-border-color: #dadada;
