--- a/layouts/partials/article/components/details.html
+++ b/layouts/partials/article/components/details.html
@@ -36,7 +36,23 @@
                 </time>
             </div>
         {{ end }}
-
+		
+		{{- if ne .Lastmod .Date -}}
+			<div>
+				{{ partial "helper/icon" "update" }}
+				<time class="article-update">
+					{{- .Lastmod.Format ( or .Site.Params.dateFormat.lastUpdated "Jan 02, 2006 15:04 MST" ) -}}
+				</time>
+			</div>
+		{{- end -}}
+		
+		<div>
+			{{ partial "helper/icon" "brush" }}
+			<time class="article-words">
+			{{ T "article.wordCount" .WordCount }}
+			</time>
+		</div>
+	  
         {{ if $showReadingTime }}
             <div>
                 {{ partial "helper/icon" "clock" }}
