--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -26,3 +26,6 @@
         {{ partial "footer/include.html" . }}
     </body>
 </html>
+
+<!-- 蜘蛛网特效的外部脚本-->
+ <script type="text/javascript" src="https://demo.hellozwh.com/source/canvas-nest.min.js"></script>
