--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -37,5 +37,25 @@
   transform: rotate(360deg); // 旋转角度为360度
 }
 
+//----------------------------------------------------------
+//为代码块顶部添加macos样式
+.article-content {
+  .highlight:before {
+    content: "";
+    display: block;
+    background: url(/code/code-header.svg);
+    height: 32px;
+    width: 100%;
+    background-size: 57px;
+    background-repeat: no-repeat;
+    margin-bottom: 5px;
+    background-position: -1px 2px;
+  }
+}
+
+
+
+
+
 
 
