--- a/layouts/partials/head/custom.html
+++ b/layouts/partials/head/custom.html
@@ -1,2 +1,3 @@
 <!-- 引入霞鹜文楷字体 -->
-<link rel='stylesheet' href='https://cdn.staticfile.org/lxgw-wenkai-screen-webfont/1.6.0/style.css' /> 
+<link rel='stylesheet' href='https://192960944.r.cdn36.com/chinesefonts2/packages/lxgwwenkai/dist/LXGWWenKai-Regular/result.css' /> 
+
