--- a/layouts/partials/footer/custom.html
+++ b/layouts/partials/footer/custom.html
@@ -24,4 +24,121 @@
 </script>
 
 
+<!--返回顶部按钮 -->
+<a href="#" id="back-to-top" title="返回顶部"></a>
+<!--返回顶部CSS -->
+<style>
+  #back-to-top {
+    display: none; /* 默认隐藏 */
+    position: fixed;/* 固定定位 */
+    bottom: 20px; /* 距离底部 20 像素 */
+    right: 55px;/* 距离右侧 55 像素 */
+    width: 55px;/* 宽度 55 像素 */
+    height: 55px;/* 高度 55 像素 */
+    border-radius: 7px; /* 圆角半径 7 像素 */
+    background-color: rgba(234, 234, 234, 0.5); /* 按钮颜色 rgba(64, 158, 255, 0.5) */
+    box-shadow: var(--shadow-l2);/* 盒子阴影 var(--shadow-l2) */
+    font-size: 30px;/* 字体大小 30 像素 */
+    text-align: center;/* 文本居中 */
+    line-height: 50px;/* 行高 50 像素 */
+    cursor: pointer;/* 鼠标指针变为手型 */
+  }
+
+  #back-to-top:before {
+    content: ' ';/* 内容为空 */
+    display: inline-block;/* 显示方式为块级元素 */
+    position: relative;/* 相对定位 */
+    top: 0;/* 距离顶部 0 像素 */
+    transform: rotate(135deg);* 旋转 135 度 */
+    height: 10px;* 高度 10 像素 */
+    width: 10px;/* 宽度 10 像素 */
+    border-width: 0 0 2px 2px;/* 边框宽度：上 0 像素，右 0 像素，下 2 像素，左 2 像素 */
+    border-color: var(--back-to-top-color);/* 边框颜色 var(--back-to-top-color) */
+    border-style: solid; /* 边框样式为实线 */
+  }
+
+  #back-to-top:hover:before {
+    border-color: #2674e0; /* 边框颜色 #2674e0 */
+  }
+
+  /* 在屏幕宽度小于 768 像素时，钮位置调整 */
+  @media screen and (max-width: 768px) {
+    #back-to-top {
+      bottom: 20px;
+      right: 20px;
+      width: 40px;
+      height: 40px;
+      font-size: 10px;
+    }
+  }
+
+  /* 在屏幕宽度大于等于 1024 像素时，按钮位置调整 */
+  @media screen and (min-width: 1024px) {
+    #back-to-top {
+      bottom: 20px;
+      right: 40px;
+    }
+  }
+
+  /* 在屏幕宽度大于等于 1280 像素时，按钮位置调整 */
+  @media screen and (min-width: 1280px) {
+    #back-to-top {
+      bottom: 20px;
+      right: 55px;
+    }
+  }
+
+  /* 目录显示时，隐藏按钮 */
+  @media screen and (min-width: 1536px) {
+    #back-to-top {
+      visibility: hidden;
+    }
+  }
+</style>
+<!--返回顶部JS -->
+<script>
+    // 定义一个函数 backToTop，用于滚动页面到顶部
+    function backToTop() {
+        // 使用 scrollTo 方法将页面滚动到顶部，平滑效果取决于浏览器的默认行为
+        window.scrollTo(0, 0);
+    }
+
+    // 当页面加载完成时执行以下代码
+    window.onload = function() {
+        // 获取当前滚动的垂直位置（兼容不同浏览器的写法）
+        let scrollTop = this.document.documentElement.scrollTop || this.document.body.scrollTop;
+        // 获取 ID 为 'back-to-top' 的元素，通常是一个返回顶部按钮
+        let totopBtn = this.document.getElementById('back-to-top');
+        if (scrollTop > 0) {
+            // 如果页面滚动位置大于 0，则显示返回顶部按钮
+            totopBtn.style.display = 'inline';
+        } else {
+            // 否则隐藏返回顶部按钮
+            totopBtn.style.display = 'none';
+        }
+    }
+
+    // 当页面滚动时执行以下代码
+    window.onscroll = function() {
+        // 获取当前滚动的垂直位置（兼容不同浏览器的写法）
+        let scrollTop = this.document.documentElement.scrollTop || this.document.body.scrollTop;
+        // 获取 ID 为 'back-to-top' 的元素
+        let totopBtn = this.document.getElementById('back-to-top');
+        if (scrollTop < 200) {
+            // 如果滚动位置小于 200 像素，则隐藏返回顶部按钮
+            totopBtn.style.display = 'none';
+        } else {
+            // 否则显示返回顶部按钮，并为按钮添加点击事件，点击时执行 backToTop 函数
+            totopBtn.style.display = 'inline';
+            totopBtn.addEventListener('click', backToTop, false);
+        }
+    }
+</script>
+
+
+
+
+
+
+
 
