添加返回顶部按钮

--- a/layouts/partials/footer/custom.html
+++ b/layouts/partials/footer/custom.html
@@ -29,18 +29,18 @@
 <!--返回顶部CSS -->
 <style>
   #back-to-top {
-    display: none; /* 默认隐藏 */
+    display: none;/* 默认隐藏 */
     position: fixed;/* 固定定位 */
-    bottom: 20px; /* 距离底部 20 像素 */
+    bottom: 20px;/* 距离底部 20 像素 */
     right: 55px;/* 距离右侧 55 像素 */
-    width: 55px;/* 宽度 55 像素 */
-    height: 55px;/* 高度 55 像素 */
-    border-radius: 7px; /* 圆角半径 7 像素 */
-    background-color: rgba(234, 234, 234, 0.5); /* 按钮颜色 rgba(64, 158, 255, 0.5) */
+    width: 50px;/* 宽度 55 像素 */
+    height: 50px;/* 高度 55 像素 */
+    border-radius: 7px;/* 圆角半径 7 像素 */
+    background-color: rgba(234, 234, 234, 0.5);/* 按钮颜色 */
     box-shadow: var(--shadow-l2);/* 盒子阴影 var(--shadow-l2) */
     font-size: 30px;/* 字体大小 30 像素 */
     text-align: center;/* 文本居中 */
-    line-height: 50px;/* 行高 50 像素 */
+    line-height: 50px;/* 行高 40 像素 */
     cursor: pointer;/* 鼠标指针变为手型 */
   }
 
@@ -49,11 +49,11 @@
     display: inline-block;/* 显示方式为块级元素 */
     position: relative;/* 相对定位 */
     top: 0;/* 距离顶部 0 像素 */
-    transform: rotate(135deg);* 旋转 135 度 */
-    height: 10px;* 高度 10 像素 */
-    width: 10px;/* 宽度 10 像素 */
-    border-width: 0 0 2px 2px;/* 边框宽度：上 0 像素，右 0 像素，下 2 像素，左 2 像素 */
-    border-color: var(--back-to-top-color);/* 边框颜色 var(--back-to-top-color) */
+    transform: rotate(135deg);/* 旋转 135 度 */
+    height: 10px;/* 高度 8 像素 */
+    width: 10px;/* 宽度 8 像素 */
+    border-width: 0 0 2px 2px; /* 边框宽度：上 0 像素，右 0 像素，下 1 像素，左 1 像素 */
+    border-color: var(--back-to-top-color); /* 边框颜色 var(--back-to-top-color) */
     border-style: solid; /* 边框样式为实线 */
   }
 
