添加私聊气泡以及测试lostmod

--- a/assets/scss/partials/footer.scss
+++ b/assets/scss/partials/footer.scss
@@ -60,6 +60,10 @@ footer.site-footer {
     color: var(--card-text-color-main);// 访问人数的颜色
   }
 }
+//修改一下页脚customText文本的颜色
+.custom-text {
+  color: var(--card-text-color-main);
+}
 
 
 
