--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -52,8 +52,124 @@
     background-position: -1px 2px;
   }
 }
+//------------------------------------------------------
+// 修复引用块内容窄页面显示问题
+a {
+  word-break: break-all;
+}
+  
+code {
+  word-break: break-all;
+}
+//---------------------------------------------------
+// 文章内容图片圆角阴影
+.article-page .main-article .article-content {
+  img {
+    max-width: 96% !important;
+    height: auto !important;
+    border-radius: 8px;
+  }
+}
+//------------------------------------------------
+// 文章内容引用块样式
+.article-content {
+  blockquote {
+    border-left: 6px solid #358b9a1f !important;
+    background: #B2DFEE;//引用块颜色
+  }
+}
+// ---------------------------------------
+// 代码块基础样式修改（改成了圆角）
+.highlight {
+  max-width: 102% !important;
+  background-color: var(--pre-background-color);
+  padding: var(--card-padding);
+  position: relative;
+  border-radius: 20px;
+  margin-left: -7px !important;
+  margin-right: -12px;
+  box-shadow: var(--shadow-l1) !important;
 
+  &:hover {
+    .copyCodeButton {
+	  opacity: 1;
+    }
+  }
 
+  // keep Codeblocks LTR
+  [dir="rtl"] & {
+    direction: ltr;
+  }
+
+  pre {
+    margin: initial;
+    padding: 0;
+    margin: 0;
+    width: auto;
+  }
+}
+//-------------------------------------------
+// 设置选中字体的区域背景颜色
+//修改选中颜色
+::selection {
+  color: #fff;
+  background: rgba(52, 73, 94, 0.5);
+}
+  
+a {
+  text-decoration: none;
+  color: var(--accent-color);
+  
+  &:hover {
+    color: var(--accent-color-darker);
+  }
+  
+  &.link {
+    color: #4288b9ad;
+    font-weight: 600;
+    padding: 0 2px;
+    text-decoration: none;
+    cursor: pointer;
+  
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+}  
+//-------------------------------------------------
+//文章封面高度更改
+.article-list article .article-image img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  
+  @include respond(md) {
+    height: 250px;
+  }
+  
+  @include respond(xl) {
+    height: 285px;
+  }
+}
+//-------------------------------------------------------
+//全局页面小图片样式微调（主要是归档页面的小图片变成圆角）
+.article-list--compact article .article-image img {
+  width: var(--image-size);
+  height: var(--image-size);
+  object-fit: cover;
+  border-radius: 17%;
+} 
+//----------------------------------------------------
+//固定代码块的高度（代码区域限制高度改为滑动浏览）
+.article-content {
+  .highlight {
+      padding: var(--card-padding);
+      pre {
+          width: auto;
+          max-height: 20em;
+      }
+  }
+}
 
 
 
