--- a/layouts/partials/comments/provider/waline.html
+++ b/layouts/partials/comments/provider/waline.html
@@ -1,5 +1,5 @@
-<script src='//unpkg.com/@waline/client@v2/dist/waline.js'></script>
-<link href='//unpkg.com/@waline/client@v2/dist/waline.css' rel='stylesheet'/>
+<script src='https://unpkg.com/@waline/client@v3/dist/waline.js'></script>
+<link href='https://unpkg.com/@waline/client@v3/dist/waline.css' rel='stylesheet'/>
 <div id="waline" class="waline-container"></div>
 <style>
     .waline-container {
@@ -27,8 +27,11 @@
     {{- end -}}
 {{- end -}}
 
-<script>
+<script type="module">
+    import { init } from 'https://unpkg.com/@waline/client@v3/dist/waline.js';
+    
     /// Waline client configuration see: https://waline.js.org/en/reference/client.html
-    Waline.init({{ $config | jsonify | safeJS }});
+    init({{ $config | jsonify | safeJS }});
 </script>
+
 {{- end -}}
